2019-04-09  Wilco Dijkstra  <wdijkstr@arm.com>

	* benchtests/bench-memmem.c (simple_memmem): Remove function.
	(basic_memmem): Add function.
	(twoway_memmem): Add function.

2019-04-09  Wilco Dijkstra  <wdijkstr@arm.com>

	* benchtests/bench-malloc-simple.c: Remove TIMING_INIT.
	* benchtests/bench-malloc-thread.c: Likewise.
	* benchtests/bench-skeleton.c: Likewise.
	* benchtests/bench-strtod.c: Likewise.
	* benchtests/bench-timing.h: Likewise.

2019-04-08  Florian Weimer  <fweimer@redhat.com>

	* resolv/resolv.h (RES_INSECURE1, RES_INSECURE2): Remove
	definitions.
	* resolv/res_send.c (send_dg): Always perform RES_INSECURE1 and
	RES_INSECURE2 security checks.
	* resolv/res_debug.c (p_option): Remove RES_INSECURE1 and
	RES_INSECURE2 handling.

2019-04-08  Florian Weimer  <fweimer@redhat.com>

	resolv: Remove support for RES_USE_INET6 and the inet6 option.
	* nscd/aicache.c (addhstaiX): Do not disable RES_USE_INET6.
	* nscd/nscd_gehst_r.c (__nscd_gethostbyname_r): Always use
	GETHOSTBYNAME.
	* resolv/Makefile (tests): Remove tst-res_use_inet6.
	(tests-internal): Update justification for tst-resolv-res_init,
	tst-resolv-res_init-thread.
	(tst-res_use_inet6): Remove target.
	(CFLAGS-tst-res_use_inet6.c): Do not set variable.
	* resolv/res_debug.c (p_option): Remove "inet6" support.
	* resolv/res_init.c (res_setoptions): Likewise.
	* resolv/res_use_inet6.h: Remove file.
	* resolv/resolv-internal.h (DEPRECATED_RES_USE_INET6): Remove
	definition.
	(res_use_inet6): Always return false.
	* resolv/resolv.h (RES_USE_INET6): Remove definition.
	* resolv/resolv_context.h: Adjust file comment.
	(struct resolv_context): Update comment on __next field.
	(__resolv_context_put): Update comment.
	* resolv/tst-res_use_inet6.c: Remove file.
	* resolv/tst-resolv-res_init-skeleton.c (print_resp): Remove
	"inet6" support.
	(test_cases): Adjust test case.
	* resolv/tst-resolv-threads.c (byname_inet6) Remove function.
	(thread_byname2_af_inet6): Use old byname_inet6 code.